Segfault when I rotate an edge (and run Blender with -d) #37100

Closed
opened 2013-10-16 06:46:07 +02:00 by Dalai Felinto · 5 comments

%%%--- Operating System, Graphics card ---
OSX

- Blender version with error, and version that worked ---

It works in official 2.69rc1
It crashes on debug build, trunk (60792) (and running Blender with -d option)

- Short description of error ---

Blender segfaults when I rotate an edge

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

open rotate_ccw.blend and Ctrl+E > Rotate Edge CCW (or CW)
(the mesh is as simple as it gets)
%%%

%%%--- Operating System, Graphics card --- OSX - Blender version with error, and version that worked --- It works in official 2.69rc1 It crashes on debug build, trunk (60792) (and running Blender with -d option) - Short description of error --- Blender segfaults when I rotate an edge - Steps for others to reproduce the error (preferably based on attached .blend file) --- open rotate_ccw.blend and Ctrl+E > Rotate Edge CCW (or CW) (the mesh is as simple as it gets) %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

%%%it happens only if I build a debug Blender (and run it with -d)%%%

%%%it happens only if I build a debug Blender (and run it with -d)%%%
Author
Owner

%%%backtrace attached%%%

%%%backtrace attached%%%

%%%fixed r60796.%%%

%%%fixed r60796.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37100
No description provided.