fix [#37100] Segfault when I rotate an edge